@@ -1,10 +1,12 @@
 v6.8
 -----
++ Completely re-wrote how Enhanced Steam handles highlighting to be much faster and accurate
 : Fixed a bug that caused coupon discounts to not display properly on app pages
 : Fixed the placement of regional price comparison box on sale pages
 : Fixed the spacing of the "Popular" tab on the home page
 : Fixed a bug that caused some packages not to process savings calculations corectly
 : Fixed a bug where DLC checkboxes would behave incorrectly if the DLC had no subID
+: Fixed a bug that caused incorrect image opacity on items when highlighting was disabled
 
 
 v6.7.1
